--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,6 +10,9 @@ html {
   box-sizing: border-box;
   font-family: 'DM Sans', sans-serif;
   font-size: 62.5%;
+  background-color: black;
+  color: white;
+   background-image: url("./assests/whiteBrick.svg");
 }
 
 .grid {
@@ -26,28 +29,26 @@ button {
 .primaryButton {
   background-color: #F4BF1C;
   color: black;
-  padding: 0.5rem 1.2rem;
+  padding: 0.5rem 1rem;
   border-radius: 6px;
   font-size: 1rem;
-  border-color: white;
+  border-color: black;
   cursor: pointer;
 }
 .primaryButton:hover {
   background-color: #F4BF1C;
   color: white;
-  padding: 0.5rem 1.2rem;
+  padding: 0.5rem 1rem;
   border-radius: 6px;
-  font-size: 1.2rem;
-  border-color: black;
+  border-color: white;
   transition: 0.1s;
 }
 .primaryButton:focus {
   background-color: #F4BF1C;
   color: white;
-  padding: 0.5rem 1.2rem;
+  padding: 0.5rem 1rem;
   border-radius: 6px;
-  font-size: 1.2rem;
-  border-color: black;
+  border-color: white;
   transition: 0.1s;
 }
 /* p {
