--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,36 +1,57 @@
-.navBar {
+.navBar-wrapper {
   background: black;
-  padding: 1.5rem 2rem;
-  height: 77px;
-  justify-content: space-between;
+  padding: 0 2rem;
+  height: 64px;
+  grid-template-columns: repeat(3, 1fr);
   align-items: center;
-  /* background-image: url("../../assests/whiteBrick.svg"); */
 }
 .logo img{
-  height: 3.5rem;
+  height: 4rem;
   cursor: pointer;
 }
-.navBar-menu-icon:hover {
-  cursor: pointer;
+.search-set-navBarMenu-wrapper {
+  grid-column: 3 / span 1;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: end;
+  align-items: center;
 }
+
+
 .navBar-menu {
-  width: 250px;
+  width: 130px;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+
+
   position: fixed;
   top: 0;
   right: -100%;
-  transition: 850ms;
+  transition: 1s;
   list-style: none;
-  background-color: rgba(255, 255, 255, 0.8);
+
+  flex-direction: column;
+  justify-content: center;
+
+  background-color: rgba(255, 255, 255, 1);
   
+  padding-bottom: 150px;
+  align-items: center;
+
+
+  
+
 }
 
 .navBar-menu.active {
   right: 0;
-  transition: 350ms;
+  transition: 450ms;
+  
+  flex-direction: column;
+  justify-content: center;
+
+  background-color: rgba(255, 255, 255, 1);
+  
+  padding-bottom: 370px;
+  align-items: center;
 
 
 }
@@ -38,11 +59,53 @@
 li {
   font-size: 1.25rem;
   margin: 1rem 0;
+
 }
 a {
   text-decoration: none;
 }
-.menu-item.active {
-  left: 0;
-  transition: 1s;
+
+
+.navBar-close-icon-wrapper  {
+  margin-left: 58px;
+  margin-bottom: 50px;
 }
+.navBar-close-menu-text {
+  display: none;
+  color: black;
+}
+
+
+
+.fa{
+  color:#0363BF;
+}
+.myCollection-icon {
+  background: url("../../assests/MyCollectionIcon.svg");
+}
+
+.logoutButton {
+  padding: 0.5rem 3.5rem;
+  background-color: white;
+  border-radius: 5px;
+  border: solid 0.5px black;
+}
+.logoutButton:hover {
+  padding: 0.5rem 3.5rem;
+  background-color: #FFCF02;
+  border-radius: 5px;
+  border: solid 0.5px black;
+  cursor: pointer;
+}
+
+
+
+
+/* @media screen and (max-width: 400px)  {
+  .navBar-wrapper {
+    grid-template-columns: repeat(1, 1fr);
+}
+  .search-set-navBarMenu-wrapper {
+    grid-template-columns: repeat(1, 1fr);
+  }
+} */
