--- a/frontend/src/components/DisplaySetsInCollection/DisplaySetsInCollection.css
+++ b/frontend/src/components/DisplaySetsInCollection/DisplaySetsInCollection.css
@@ -4,9 +4,10 @@
     column-gap: 1rem;
     row-gap: 1rem;
     padding-top: 10px;
+    background-color: #fff;
 }
 .set-info-outer-wrapper{
-    width: 400px;
+    width: 380px;
     height: 350px;
     border: #e2e2e2 solid 1px;
     overflow: hidden;
