--- a/frontend/src/components/SetsInfoDetails/SetInfoDetails.css
+++ b/frontend/src/components/SetsInfoDetails/SetInfoDetails.css
@@ -1,26 +1,62 @@
 .modal-active{
     position: fixed;
-    display: flex;
     width: 100%;
     height: 100vh;
     top: 0;
     left: 0px;
     justify-content: center;
     align-items: center;
-    border: 5px green solid;
-    visibility: visible;
     opacity: 1;
-    background-color: rgba(210, 213, 161, 0.8);
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
-.modal-content-wrapper {
-    width:50%;
-    height:70%;
-    background-color: aqua;
+.modal-content-wrapper-outer {
+    background-color: #fff;
     position: relative;
+    padding: 1rem 2rem;
+    border: #e2e2e2 solid 1px;
+}
+.modal-content-wrapper-innter {
+    grid-template-columns: repeat(2, 1fr);
+}
+.close-modal-btn {
+    justify-content: flex-end;
+}
+.close-modal-btn button {
+    background-color: transparent;
+    border: none;
+}
+.modal-img {
+    width: 380px;
+    height: 250px;
 }
 
-.modal-img {
-    width: 200px;
-    height: 200px;
+.set-info-table {
+    margin: 1rem 0;
 }
+.set-info-table td {
+    padding-right: 30px;
+}
+
+
+/* @media screen and (max-width: 400px) {
+    .modal-active{
+        position: fixed;
+        width: 50%;
+        height: 100%;
+        top: 0;
+        left: 0px;
+        opacity: 1;
+        background-color: rgba(255, 255, 255, 0.8);
+    }
+    .modal-content-wrapper-outer {
+        background-color: #fff;
+        border: #e2e2e2 solid 1px;
+        margin-bottom: 700px;
+    }
+    .modal-img {
+        width: 220px;
+        height: 200px;
+    }
+    
+} */
