finalised styling of components  on MyCollectionPage and MyWishListPage

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,6 +23,10 @@ html {
   display: flex;
 }
 /* typography */
+h1 {
+  font-size:3rem;
+  font-weight: 700;
+}
 h2 {
   font-size:2rem;
   font-weight: 700;
