added HomePage css + finalised Homepage dashboard for login user

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,6 +40,9 @@ p {
   font-weight: 400;
 }
 
+ul {
+  list-style-type: none;
+}
 .primary-button{
   background-color: #fd8024;
   padding: 1rem 0rem;
