--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -35,6 +35,7 @@
   
   padding-bottom: 150px;
   align-items: center;
+  z-index: 1;
 
 
   
@@ -52,6 +53,7 @@
   
   padding-bottom: 370px;
   align-items: center;
+  z-index: 1;
 
 
 }
