--- a/frontend/src/pages/LoginPage/LoginPage.css
+++ b/frontend/src/pages/LoginPage/LoginPage.css
@@ -1,3 +1,45 @@
+.login-page-container {
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 100vh;
+}
+.login-minifighead {
+  justify-content: space-around;
+}
+.login-minifighead img{
+  width: 80px;
+  margin: 20px 0px;
+  border: 0px solid rgba(255, 255, 255, 0.9);
+  border-radius: 5rem;
+  
+}
+
+.form-container-outer {
+  justify-content: center;
+}
+
+.form-wrapper-inner {
+
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-wrapper-inner input {
+  font-size: 1.rem;
+  font-weight: 500;
+  display: block;
+  margin: 10px 0px;
+  display: block;
+}
+.form-wrapper-inner button {
+  width: 60%;
+  margin-top: 20px;
+}
+.register-wrapper {
+  margin-top: 50px;
+}
+.create-account-p{
+  color: #3ca1ff;
+}
 .error {
   color: red;
 }
