--- a/frontend/src/components/SearchResultsPageComponents/DisplaySearchResults/DisplaySearchResults.css
+++ b/frontend/src/components/SearchResultsPageComponents/DisplaySearchResults/DisplaySearchResults.css
@@ -1,12 +1,11 @@
 .search-results-wrapper {
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 1rem;
-    row-gap: 1rem;
-    padding-top: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    row-gap: 4rem;
+    padding-top: 5px;
     background-color: #fff;
 }
 
 .single-search-result-outter-wrapper {
     width: 300px;
-    height: 350px;
+    height: 420px;
 }
