updated styling of displaySetsInWishList for responsive layout

--- a/frontend/src/components/SetsInfoDetails/SetInfoDetails.css
+++ b/frontend/src/components/SetsInfoDetails/SetInfoDetails.css
@@ -22,6 +22,9 @@
 .close-modal-btn {
     justify-content: flex-end;
 }
+.close-modal-btn :hover {
+    cursor: pointer;
+}
 .close-modal-btn button {
     background-color: transparent;
     border: none;
