--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,22 +1,27 @@
 .navBar-wrapper {
-  background: black;
+  /* background: black; */
+  /* background-repeat: repeat-y; */
+  /* background-size: contain; */
   padding: 0 2rem;
-  height: 64px;
+  height: 50px;
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
 }
 .logo img{
-  height: 4rem;
+  margin-top: 0.3rem;
+  height: 3.5rem;
   cursor: pointer;
 }
 .search-set-navBarMenu-wrapper {
   grid-column: 3 / span 1;
   grid-template-columns: repeat(2, 1fr);
   justify-items: end;
-  align-items: center;
 }
 
-
+.navBar-search-set-icon {
+  width: 3rem;
+  height: 3rem;
+}
 .navBar-menu {
   width: 30%;
   height: 100vh;
