--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,9 +13,9 @@ html {
   box-sizing: border-box;
   font-family: 'DM Sans', sans-serif;
   font-size: 62.5%;
-  color: white;
+  /* color: white;
   background-image: url("./assests/whiteBrick.svg");
-  background-position: -51px 0;
+  background-position: -51px 0; */
 
 }
 
@@ -29,18 +29,25 @@ html {
 h1 {
   font-size:3rem;
   font-weight: 700;
+  padding: 0 0 2rem 0;
+  line-height: 1;
 }
 h2 {
   font-size:2rem;
   font-weight: 700;
+  padding: 0 0 1.5rem 0;
+  line-height: 1.2;
 }
 h3 {
   font-size: 1.5rem;
   font-weight: 700;
+  padding: 0 0 1rem 0;
+
 }
 p {
   font-size:1.5rem;
   font-weight: 400;
+  line-height: 1.5;
 }
 
 ul {
