--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -1,18 +1,18 @@
 .homepage-container{
     /* background-color: rgba(255, 255, 255, 1); */
-    color: black;
-    height: 100%;
+    /* color: black;
+    height: 100%; */
 }
 
 .hero-section-wrapper {
-    padding: 50px 0;
+    /* padding: 50px 0;
     flex-direction: column;
-    align-items: center;
+    align-items: center; */
     /* background-color: rgba(255, 255, 255, 0.9); */
 }
 .home-page-wrapper-black {
-    margin: 0px 50px;
-    background-color: rgba(0, 0, 0, 1);
+    /* margin: 0px 50px;
+    background-color: rgba(0, 0, 0, 1); */
 }
 .hero-section-images {
  /* width: 50%; */
@@ -22,43 +22,73 @@
 }
 
 .u-letter {
-    max-width: 150px;
-    max-height: 200px;
+    /* max-width: 150px;
+    max-height: 200px; */
 }
 
 .home-page-section-one {
-    padding-left: 8rem;
+    /* padding-left: 8rem;
     padding-right: 9rem;
     background-color: rgba(255, 255, 255, 0.8);
-    width: 100%;
+    width: 100%; */
 }
 
 .leugoOnIphone-img {
-    width: 500px;
-    height: 680px;
+    /* width: 500px;
+    height: 680px; */
 }
 
 .homepage-background-login-user {
-    padding: 3rem 6rem;
+    /* padding: 3rem 6rem; */
 }
 
 .user-sets-info {
-    flex-direction: column;
-    margin-bottom: 3rem;
+    /* flex-direction: column;
+    margin-bottom: 3rem; */
 }
 .li-item-flex {
-    align-items: center;
-    margin-bottom: 2rem;
+    /* align-items: center;
+    margin-bottom: 2rem; */
 }
 .li-item-flex img {
-    margin-right: 2rem;
+    /* margin-right: 2rem; */
 }
 .select-chart-type-wrapper {
-    align-items: center;
+    /* align-items: center;
     justify-content: space-between;
-    margin-bottom: 2rem;
+    margin-bottom: 2rem; */
 }
 .chart-wrapper-flex {
-    width: 60%;
-    justify-content: center;
+    /* width: 60%;
+    justify-content: center; */
+}
+h1, h2, p{
+    color: black;
+}
+.home-page-wrapper{ 
+    background-color: rgba(255, 255, 255, 0.7);
+}
+@media only screen and (max-width: 767px) {
+    /* styles for screens with a maximum width of 767px, such as smartphones */
+    .hero-section-wrapper{
+        background-color: rgba(255, 255, 255, 0.5);
+        padding: 2rem 3rem;
+        flex-direction: column;
+        align-items: center;
+    }
+    .hero-section-one {
+        padding: 0 0 5rem 0;
+    }
+    .hero-section-sub2{
+        padding: 2rem 0 0.5rem 0;
+        align-items: center;
+    }
+    .hero-section-sub2 img{
+        padding: 0rem 1rem 0 0;
+    }
+    .leugoOnIphone-img {
+        width: 300px;
+        height: 380px;
+    }
+    
 }
