updated style for HomePage.css

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,9 +13,9 @@ html {
   box-sizing: border-box;
   font-family: 'DM Sans', sans-serif;
   font-size: 62.5%;
-  /* color: white;
+  color: white;
   background-image: url("./assests/whiteBrick.svg");
-  background-position: -51px 0; */
+  /* background-position: -51px 0; */
 
 }
 
